--- a/project.properties
+++ b/project.properties
@@ -12,4 +12,4 @@
 
 # Project target.
 target=android-18
-android.library.reference.1=../../PersonalWorkspace/AbstruceLogic/abs-and-crypto
+android.library.reference.1=../abs-and-crypto
